[gd_scene load_steps=9 format=3 uid="uid://uwl63ofvgswb"]

[ext_resource type="Script" path="res://Scene/UI/mode_choose.gd" id="1_yuo81"]
[ext_resource type="PackedScene" uid="uid://74qodqlakjxk" path="res://Scene/UI/change_scene.tscn" id="2_hwu5f"]
[ext_resource type="PackedScene" uid="uid://c2f1f2dlrveog" path="res://Scene/UI/fore_ground.tscn" id="2_prf3v"]
[ext_resource type="Shader" path="res://Scene/UI/water_alternative.gdshader" id="3_rq5me"]
[ext_resource type="Theme" uid="uid://dh8dblbdpjymt" path="res://Scene/UI/theme.tres" id="4_qdu8q"]
[ext_resource type="Shader" path="res://Scene/UI/high_light.gdshader" id="4_sdmd1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2d2n3"]
shader = ExtResource("3_rq5me")
shader_parameter/R = Vector2(0.8, 0.6)
shader_parameter/scale = 0.5
shader_parameter/speed = 0.1
shader_parameter/direction = Vector3(1, 1, 0)
shader_parameter/distortion = 0.5
shader_parameter/layers = 2.0
shader_parameter/shades = 3.0
shader_parameter/steps = 4
shader_parameter/tint = Vector3(0.25, 0.2, 0.5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uv1no"]
shader = ExtResource("4_sdmd1")
shader_parameter/Line_Smoothness = 0.045
shader_parameter/Line_Width = 0.09
shader_parameter/Brightness = 3.0
shader_parameter/Rotation_deg = 30.0
shader_parameter/Distortion = 1.6
shader_parameter/Speed = 0.4
shader_parameter/Position = 0.0
shader_parameter/Position_Min = 0.25
shader_parameter/Position_Max = 0.5
shader_parameter/Alpha = 0.6

[node name="ModeChoose" type="CanvasLayer"]
process_mode = 3
layer = 3
script = ExtResource("1_yuo81")
change_scene_scene = ExtResource("2_hwu5f")

[node name="BackGround" type="CanvasLayer" parent="."]
layer = 3

[node name="ColorRect" type="ColorRect" parent="BackGround"]
material = SubResource("ShaderMaterial_2d2n3")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="HighLight" type="ColorRect" parent="BackGround"]
material = SubResource("ShaderMaterial_uv1no")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="BackGround"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BackGround/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 64

[node name="Information" type="Label" parent="BackGround/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_qdu8q")
text = "Select game mode"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="BackGround/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="AdjustTime" type="HBoxContainer" parent="BackGround/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 32

[node name="Minus" type="Button" parent="BackGround/MarginContainer/VBoxContainer/VBoxContainer/AdjustTime"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("4_qdu8q")
theme_override_font_sizes/font_size = 64
text = "-"

[node name="Time" type="RichTextLabel" parent="BackGround/MarginContainer/VBoxContainer/VBoxContainer/AdjustTime"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_qdu8q")
theme_override_colors/default_color = Color(0.0963668, 0.502131, 0.864082, 1)
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "2:00"
fit_content = true
autowrap_mode = 0

[node name="Plus" type="Button" parent="BackGround/MarginContainer/VBoxContainer/VBoxContainer/AdjustTime"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("4_qdu8q")
theme_override_font_sizes/font_size = 64
text = "+"

[node name="TimingMode" type="Button" parent="BackGround/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_qdu8q")
theme_override_font_sizes/font_size = 64
text = "Timing mode"

[node name="PureMode" type="Button" parent="BackGround/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_qdu8q")
theme_override_font_sizes/font_size = 64
text = "Pure mode"

[node name="Start" type="Button" parent="BackGround/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_qdu8q")
theme_override_font_sizes/font_size = 72
text = "Start"

[node name="ForeGround" parent="." instance=ExtResource("2_prf3v")]
layer = 3
